demo-yaml-dir/demo-a/demo-a-nodeport.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# istio-springboot-demo-a service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: istio-springboot-demo-a
  labels:
    app: istio-springboot-demo-a
    service: istio-springboot-demo-a
spec:
  type: NodePort
  ports:
  - name: http
    port: 18080
    targetPort: 8080
  selector:
    app: istio-springboot-demo-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-springboot-demo-a-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-springboot-demo-a
      version: v1
  template:
    metadata:
      labels:
        app: istio-springboot-demo-a
        version: v1
    spec:
      containers:
      - image: demo-istio-springboot-demo-b
        imagePullPolicy: IfNotPresent
        name: istio-springboot-demo-a
        ports:
        - containerPort: 8080
