demo-yaml-dir/demo-a/demo-a-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-springboot-demo-a-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-springboot-demo-a
spec:
  hosts:
  - "*"
  gateways:
  - istio-springboot-demo-a-gateway
  http:
  - route:
    - destination:
        host: istio-springboot-demo-a
        port:
          number: 8080
